--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "aurelios-design-guide",
+  "name": "anta-website",
   "private": true,
   "version": "0.0.0",
   "scripts": {
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
+    "@next/third-parties": "^15.5.4",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-aspect-ratio": "^1.1.0",
@@ -39,6 +40,7 @@
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.4",
     "@tanstack/react-query": "^5.56.2",
+    "@types/nodemailer": "^7.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
@@ -48,6 +50,7 @@
     "lucide-react": "^0.462.0",
     "next": "^14.0.0",
     "next-themes": "^0.3.0",
+    "nodemailer": "^7.0.6",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
